--- a/styles.css
+++ b/styles.css
@@ -2,48 +2,141 @@ body {
   margin: 0;
   font-family: 'Merriweather', serif;
   text-align: center;
+  color: #40514E;
 }
 
 div {
-  background-color: #E4F9F5;
+  background-color: ;
 }
 
+a{
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 10px;
+  text-decoration: none;
+}
+
+a:hover{
+  color: #EAF6F6;
+}
+
+
 h1 {
+  font-size: 4.3rem;
   font-family: "Sacramento", cursive;
-  margin-top: 0;
+  margin: 50px auto 0 auto;
   top: 30%;
+  color: #66BFBF;
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
+  color: #66BFBF;
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
+  color: #11999E;
+
+}
+
+hr{
+  border:none;
+border-top:10px dotted;
+height:10px;
+width:5%;
+color: #EAF6F6;
+margin: 100px auto;
+
 }
 
 p {
-  font-style: italic;
+  line-height: 2;
+  font-weight: normal;
+  font-size: 2.3rem;
+  font-size: 20px;
+  padding: 10px
 }
 
 .cloud {
   position: absolute;
-  right: 25%;
+  right: 15%;
   top: 8%;
+}
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #1199e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #1199e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #1199e);
+  background-image: -o-linear-gradient(top, #11cdd4, #1199e);
+  background-image: linear-gradient(to bottom, #11cdd4, #1199e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Montserrat ;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+
+.bottom-para{
+  color: white;
+
 }
 
 .bottom-cloud {
   position: absolute;
-  top: 18%;
-  left: 17%;
+  top: 60%;
+  left: 15%;
 }
+
+.skill-row{
+  width: 50%;
+  margin:100px auto 100px auto;
+  text-align: left;
+  line-height: 2;
+}
+
+.Skills{
+  width: 25%;
+  float:left;
+  margin-right: 30px;
+}
+
+.Skills-2{
+  width: 25%;
+  float:right;
+  margin-left: 30px;
+}
+
 
 .top-container {
   background-color: #E4F9F5;
   position: relative;
-  padding-top: 100px;
+  padding-top: 200px;
 }
 
-.middle-container {}
+.top-gif{
+  padding-bottom: 100px;
+}
 
-.bottom-container {}
+.middle-container {
+  margin: 100px 0;
+}
+
+.bottom-container {
+  background-color: #66BFBF;
+  margin:0;
+  padding: 20px 0 20px;
+}
